--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             width: 100%;
             height: 100%;
         }
-        #clickMeButton, #topRightButton {
+        #clickMeButton {
             position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
             padding: 20px;
             background-color: #00aaff;
             color: white;
@@ -25,14 +28,15 @@
             cursor: pointer;
             font-size: 16px;
         }
-        #clickMeButton {
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
         #topRightButton {
+            position: absolute;
             right: 10px;
             top: 10px;
+            padding: 20px;
+            background-color: #00aaff;
+            color: white;
+            border: none;
+            font-size: 16px;
         }
         #timeDetails {
             position: absolute;
@@ -51,12 +55,10 @@
     </div>
 
     <script>
-        document.querySelectorAll('button').forEach(button => {
-            button.addEventListener('click', function() {
-                const now = new Date();
-                const timeDetails = now.toISOString().slice(0, 19).replace('T', ' ') + '.' + now.getMilliseconds();
-                document.getElementById('timeDetails').innerText = 'Clicked at: ' + timeDetails;
-            });
+        document.getElementById('clickMeButton').addEventListener('click', function() {
+            const now = new Date();
+            const timeDetails = now.toISOString().slice(0, 19).replace('T', ' ') + '.' + now.getMilliseconds();
+            document.getElementById('timeDetails').innerText = 'Clicked at: ' + timeDetails;
         });
     </script>
 </body>
